整合mybatis 框架 fix

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -101,6 +101,7 @@
         </div>
     </div>
 </div>
+<script th:inline="javascript">var ctx = [[@{/}]];</script>
 <script src="../static/vendors/jquery/dist/jquery.min.js" th:src="@{/vendors/jquery/dist/jquery.min.js}"></script>
 <script src="../static/vendors/bootstrap/dist/js/bootstrap.min.js" th:src="@{/vendors/bootstrap/dist/js/bootstrap.min.js}"></script>
 <script src="../static/vendors/jquery-validation/dist/jquery.validate.min.js" th:src="@{/vendors/jquery-validation/dist/jquery.validate.min.js}"></script>
