权限表创建，shiro权限处理登录测试等

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,13 +33,13 @@
                 <form method="post" id="formLogin" action="/login/">
                     <h1>Login Form</h1>
                     <div>
-                        <input id="username" name="username" value="" type="text" class="form-control" placeholder="Username" required=""/>
+                        <input id="username" name="username" value="admin" type="text" class="form-control" placeholder="Username" required=""/>
                     </div>
                     <div>
-                        <input id="password" name="password" value="" type="password" class="form-control" placeholder="Password" required=""/>
+                        <input id="password" name="password" value="admin" type="password" class="form-control" placeholder="Password" required=""/>
                     </div>
                     <div>
-                        <a id="login" class="btn btn-default submit" onclick="submit()">Log in</a>
+                        <a id="login" class="btn btn-default submit" onclick="login()">Log in</a>
                         <a class="reset_pass" href="#">Lost your password?</a>
                     </div>
 
