--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
 
-    <title>Gentelella Alela! | </title>
+    <title>首页 </title>
 
     <!-- Bootstrap -->
     <link href="../static/vendors/bootstrap/dist/css/bootstrap.min.css" th:href="@{/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
@@ -31,13 +31,10 @@
 </head>
 
 <body class="nav-md">
-<a th:href="@{/user/}">
-    <H1 style="color: white">[[${user.userName}]]</H1>
-</a>
-<!--<div class="container body">
+<div class="container body">
     <div class="main_container">
         <div class="col-md-3 left_col">
-            &lt;!&ndash;左&ndash;&gt;
+            <!--左-->
             <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
                     <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
@@ -45,125 +42,79 @@
 
                 <div class="clearfix"></div>
 
-                &lt;!&ndash; menu profile quick info &ndash;&gt;
+                <!-- menu profile quick info -->
                 <div class="profile clearfix">
                     <div class="profile_pic">
-                        <img src="../static/images/img.jpg" alt="..." class="img-circle profile_img">
+                        <img src="../static/images/img.jpg" th:src="@{images/img.jpg}" alt="..." class="img-circle profile_img">
                     </div>
                     <div class="profile_info">
                         <span>Welcome,</span>
                         <h2>John Doe</h2>
                     </div>
                 </div>
-                &lt;!&ndash; /menu profile quick info &ndash;&gt;
+                <!-- /menu profile quick info -->
 
                 <br />
 
-                &lt;!&ndash; sidebar menu &ndash;&gt;
+                <!-- 侧边 菜单 -->
                 <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                     <div class="menu_section">
-                        <h3>General</h3>
+                        <h3>Hello world!</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-home"></i> 首页 <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a href="index.html">Dashboard</a></li>
                                     <li><a href="index2.html">Dashboard2</a></li>
                                     <li><a href="index3.html">Dashboard3</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                            <!--父级菜单循环展示-->
+                            <li th:each="menu : ${menus}">
+                                <!--javascript:void(0) 不链接到任何地方-->
+                                <a th:href="@{${menu.url == ''} ? |#| : ${menu.url}}">
+                                    <i class="fa fa-gear" th:class="${menu.icon}"></i>
+                                    [[${menu.menuName}]]
+                                    <span class="fa fa-chevron-down"></span>
+                                </a>
+                                <!--子节点菜单循环展示-->
                                 <ul class="nav child_menu">
-                                    <li><a href="form.html">General Form</a></li>
-                                    <li><a href="form_advanced.html">Advanced Components</a></li>
-                                    <li><a href="form_validation.html">Form Validation</a></li>
-                                    <li><a href="form_wizards.html">Form Wizard</a></li>
-                                    <li><a href="form_upload.html">Form Upload</a></li>
-                                    <li><a href="form_buttons.html">Form Buttons</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="general_elements.html">General Elements</a></li>
-                                    <li><a href="media_gallery.html">Media Gallery</a></li>
-                                    <li><a href="typography.html">Typography</a></li>
-                                    <li><a href="icons.html">Icons</a></li>
-                                    <li><a href="glyphicons.html">Glyphicons</a></li>
-                                    <li><a href="widgets.html">Widgets</a></li>
-                                    <li><a href="invoice.html">Invoice</a></li>
-                                    <li><a href="inbox.html">Inbox</a></li>
-                                    <li><a href="calendar.html">Calendar</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="tables.html">Tables</a></li>
-                                    <li><a href="tables_dynamic.html">Table Dynamic</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="chartjs.html">Chart JS</a></li>
-                                    <li><a href="chartjs2.html">Chart JS2</a></li>
-                                    <li><a href="morisjs.html">Moris JS</a></li>
-                                    <li><a href="echarts.html">ECharts</a></li>
-                                    <li><a href="other_charts.html">Other Charts</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                                    <li><a href="fixed_footer.html">Fixed Footer</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="menu_section">
-                        <h3>Live On</h3>
-                        <ul class="nav side-menu">
-                            <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="e_commerce.html">E-commerce</a></li>
-                                    <li><a href="projects.html">Projects</a></li>
-                                    <li><a href="project_detail.html">Project Detail</a></li>
-                                    <li><a href="contacts.html">Contacts</a></li>
-                                    <li><a href="profile.html">Profile</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="page_403.html">403 Error</a></li>
-                                    <li><a href="page_404.html">404 Error</a></li>
-                                    <li><a href="page_500.html">500 Error</a></li>
-                                    <li><a href="plain_page.html">Plain Page</a></li>
-                                    <li><a href="login.html">Login Page</a></li>
-                                    <li><a href="pricing_tables.html">Pricing Tables</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="#level1_1">Level One</a>
-                                    <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li class="sub_menu"><a href="level2.html">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_1">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_2">Level Two</a>
+                                    <li th:each="cmenu : ${menu.children}">
+                                        <!--判断子节点的子节点是否为空 为空-->
+                                        <a th:if="${#lists.isEmpty(cmenu.children)}" th:text="${cmenu.menuName}" th:href="@{${cmenu.url}}">
+                                            二级菜单
+                                            <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                        <!--判断子节点的子节点是否为空 不为空-->
+                                        <a th:if="${not #lists.isEmpty(cmenu.children)}" th:text="${cmenu.menuName}" th:href="#">
+                                            二级菜单
+                                            <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                        <ul th:if="${not #lists.isEmpty(cmenu.children)}" class="nav child_menu">
+                                            <li th:each="emenu : ${cmenu.children}">
+                                                <a th:if="${#lists.isEmpty(emenu.children)}" th:href="${emenu.url}" th:text="${emenu.menuName}">
+                                                    三级菜单
+                                                    <span class="fa fa-chevron-down"></span>
+                                                </a>
+                                                <a th:if="${not #lists.isEmpty(emenu.children)}" th:href="${emenu.url}" th:text="${emenu.menuName}">
+                                                    三级菜单
+                                                    <span class="fa fa-chevron-down"></span>
+                                                </a>
+                                                <ul th:if="${not #lists.isEmpty(emenu.children)}" class="nav child_menu">
+                                                    <li th:each="fmenu : ${emenu.children}">
+                                                        <a th:if="${#lists.isEmpty(fmenu.children)}"  th:text="${fmenu.menuName}" th:href="@{${fmenu.url}}">四级菜单</a>
+                                                    </li>
+                                                </ul>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li><a href="#level1_2">Level One</a>
-                                    </li>
                                 </ul>
                             </li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
                         </ul>
                     </div>
-
                 </div>
-                &lt;!&ndash; /sidebar menu &ndash;&gt;
+                <!-- /sidebar menu -->
 
-                &lt;!&ndash; /menu footer buttons &ndash;&gt;
+                <!-- /menu footer buttons -->
                 <div class="sidebar-footer hidden-small">
                     <a data-toggle="tooltip" data-placement="top" title="Settings">
                         <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
@@ -178,11 +129,11 @@
                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                     </a>
                 </div>
-                &lt;!&ndash; /menu footer buttons &ndash;&gt;
+                <!-- /menu footer buttons -->
             </div>
         </div>
 
-        &lt;!&ndash; top navigation &ndash;&gt;
+        <!-- top navigation -->
         <div class="top_nav">
             <div class="nav_menu">
                 <div class="nav toggle">
@@ -273,12 +224,12 @@
                 </nav>
             </div>
         </div>
-        &lt;!&ndash; /top navigation &ndash;&gt;
+        <!-- /top navigation -->
 
-        &lt;!&ndash; page content &ndash;&gt;
+        <!-- page content -->
         <div class="right_col" role="main">
-            &lt;!&ndash;&ndash;&gt;
-            &lt;!&ndash; top tiles &ndash;&gt;
+            <!---->
+            <!-- top tiles -->
             <div class="row" style="display: inline-block;" >
                 <div class="tile_count">
                     <div class="col-md-2 col-sm-4  tile_stats_count">
@@ -313,7 +264,7 @@
                     </div>
                 </div>
             </div>
-            &lt;!&ndash; /top tiles &ndash;&gt;
+            <!-- /top tiles -->
 
             <div class="row">
                 <div class="col-md-12 col-sm-12 ">
@@ -780,7 +731,7 @@
                     <div class="row">
 
 
-                        &lt;!&ndash; Start to do list &ndash;&gt;
+                        <!-- Start to do list -->
                         <div class="col-md-6 col-sm-6 ">
                             <div class="x_panel">
                                 <div class="x_title">
@@ -845,9 +796,9 @@
                                 </div>
                             </div>
                         </div>
-                        &lt;!&ndash; End to do list &ndash;&gt;
+                        <!-- End to do list -->
 
-                        &lt;!&ndash; start of weather widget &ndash;&gt;
+                        <!-- start of weather widget -->
                         <div class="col-md-6 col-sm-6 ">
                             <div class="x_panel">
                                 <div class="x_title">
@@ -951,24 +902,23 @@
                             </div>
 
                         </div>
-                        &lt;!&ndash; end of weather widget &ndash;&gt;
+                        <!-- end of weather widget -->
                     </div>
                 </div>
             </div>
         </div>
-        &lt;!&ndash; /page content &ndash;&gt;
+        <!-- /page content -->
 
-        &lt;!&ndash; footer content &ndash;&gt;
+        <!-- footer content -->
         <footer>
             <div class="pull-right">
                 Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
             </div>
             <div class="clearfix"></div>
         </footer>
-        &lt;!&ndash; /footer content &ndash;&gt;
+        <!-- /footer content -->
     </div>
-</div>-->
-
+</div>
 <!-- jQuery -->
 <script src="../static/vendors/jquery/dist/jquery.min.js" th:src="@{/vendors/jquery/dist/jquery.min.js}"></script>
 <!-- Bootstrap -->
